--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,13 +7,15 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 pydantic==2.5.0
 pydantic-settings==2.1.0
-openai==1.3.0
-Pillow==10.1.0
-transformers==4.36.0
-torch==2.1.0
 python-dotenv==1.0.0
+openai==1.3.7
+pillow==10.1.0
+transformers==4.36.0
+torch==2.1.1
+torchvision==0.16.1
+numpy==1.24.3
 aiofiles==23.2.1
+email-validator==2.1.0
+httpx==0.25.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2
-email-validator==2.1.0
